--- a/packages.config
+++ b/packages.config
@@ -3,7 +3,7 @@
   <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
-  <package id="Emgu.CV" version="4.9.0.5494" targetFramework="net472" />
+  <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net472" />
@@ -16,4 +16,5 @@
   <package id="System.Text.Json" version="8.0.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net472" />
 </packages>
